[MODORDERS-1165] Populate piece receivingTenentId when openning order with Instance, Holding